[metadata]
name = CCASoftwareHacking
long_description = file: README.md
author = Matthew Daunt
author_email = mdd423@nyu.edu
url = https://github.com/kazewong/CCASoftwareHacking.git
license = MIT License
version = attr: 1.0

[options]
setup_requires = setuptools_scm
zip_safe = False
packages = find:
install_requires =
    numpy
