[metadata]
name = plotGaussian
version = 0.0.1
author = A bunch of people
author_email = juan.guerra@yale.edu
description = plot a gaussian
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kazewong/CCASoftwareHacking
project_urls =
    Bug Tracker = https://github.com/kazewong/CCASoftwareHacking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src